<resources>
    <string name="app_name">TwitterUI</string>
    <string name="developed_by_armando_santos">Developed by Armando Santos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="reconding">Reconding</string>
    <string name="notification">Notifications</string>
    <string name="inbox">Inbox</string>
    <string name="twitter">Twitter</string>
    <string name="profile">Profile</string>
    <string name="highlight">Highlight</string>
    <string name="settings">Settings</string>
    <string name="comment">Comment</string>
    <string name="retweet">Retweet</string>
    <string name="like">Like</string>
    <string name="edit">Edit</string>
    <string name="edited">EDITED</string>
    <string name="happening_now">Happening Now</string>
    <string name="spaces_going_on_right_now">Spaces going on right now</string>
    <string name="get_these_in_your_calendar">Get these in your calendar</string>
    <string name="people_you_follow_will_be_tuning_in">People you follow will be tuning in</string>
    <string name="tweet_notifications">Tweet reciente de </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_the_nconversation">Join the\nconversation</string>
    <string name="when_someone_on_twitter_mentions_you_in_a_tweet_or_reply_you_ll_find_it_here">When someone on Twitter mentions you in a Tweet or reply, you\'ll find it here.</string>
    <string name="trends_for_you">Trends for you</string>
    <string name="who_to_follow">Who to follow</string>
    <string name="rock">Rock</string>
    <string name="follow">Follow</string>
    <string name="waiting_on_a_moment">Waiting on a Moment</string>
    <string name="moment_are_curated_stores_about_what_s_happening_powered_by_tweets_it_s_easy_to_create_your_own_story_with_twitter_moments_on_twitter_com">Moment are curated stores about what\'s happening--powered by Tweets. It\'s easy to create your own story with Twitter Moments on Twitter.com.</string>
    <string name="moments_text">Moments</string>
    <string name="monetization_options">Monetization options</string>
    <string name="get_help">Get help</string>
    <string name="save_tweets_for_later">Save Tweets for later</string>
    <string name="don_tlet_the_good_ones_fly_away_bookmark_tweets_to_easily_find_them_again_in_the_future">Don\'t let the good ones fly away! Bookmark Tweets to easily find them again in the future.</string>
    <string name="the_topics_you_follow_are_used_to_personalize_the_tweets_events_and_ads_that_you_see_and_show_up_publicly_on_your_profile">The Topics you follow are used to personalize the Tweets, events, and ads that you see, and show up publicly on your profile</string>
    <string name="suggested_topics">Suggested Topics</string>
    <string name="you_ll_see_top_tweets_about_these_right_in_your_home_timeline">You\'ll see top Tweets about these right in your Home timeline</string>
    <string name="more_topics">More Topics</string>
    <string name="topics_that_you_follow_are_shown_here_to_see_all_the_things_that_twitter_thinks_you_re_interested_in_check_out_your_twitter_data_you_can_also_learn_more_about_following_topics">Topics that you follow are shown here. To see all the things that Twitter thinks you\'re interested in, check out Your Twitter data. You can also learn more about following Topics.</string>
    <string name="following">Following</string>
    <string name="nothing_to_see_here_yet">Nothing to see here -- yet.</string>
    <string name="for_you">For you</string>
    <string name="outdoors">Outdoors</string>
    <string name="travel">Travel</string>
    <string name="fashion">Fashion</string>
    <string name="entertainment">Entertainment</string>
    <string name="art_culture"><![CDATA[Art & culture]]></string>
    <string name="music">Music</string>
    <string name="nothing_to_see_here_yet_pin_your_favorite_lists_to_access_them_quickly">Nothing to see here yet -- pin your favorite Lists to access them quickly.</string>
    <string name="you_haven_t_created_or_followed_any_lists_when_you_do_they_ll_show_up_here">You haven\'t created or followed any Lists. When you do, they\'ll show up here.</string>
    <string name="pinned_lists">Pinned Lists</string>
    <string name="your_lists">Your Lists</string>
    <string name="show_more">Show more</string>
    <string name="discover_new_lists">Discover new Lists</string>
    <string name="smartemboser">Smartemboser</string>
    <string name="armandoesmart">ArmandoESmart</string>
    <string name="_154">154</string>
    <string name="_63">63</string>
    <string name="followers">Followers</string>
    <string name="email_card_detail_transition_name">email_card_detail</string>
</resources>