<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="20dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_photo"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:src="@drawable/egg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/profile_photo"
        android:text="Smartemboser"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/profile_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/tv_name"
        android:text="\@Arman..."
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/tv_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tweet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/profile_photo"
        android:text="This is a tweet"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/profile_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <ImageView
        android:id="@+id/imgPostTwetter"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/search"
        android:maxHeight="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/anya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_tweet_text" />

    <TextView
        android:id="@+id/tv_tweet_edited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tweet_text"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/profile_photo"
        android:text="@string/edited"
        android:textColor="@color/twitterBlueDarker"
        android:textSize="13sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/tv_tweet_text"
        app:layout_constraintTop_toBottomOf="@+id/imgPostTwetter" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tweet_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@id/profile_photo"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_photo"
        app:layout_constraintTop_toBottomOf="@+id/imgPostTwetter">

        <LinearLayout
            android:id="@+id/llComments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tweet_action_reply"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@string/comment"
                android:src="@drawable/ic_twitter_comment"
                app:tint="@color/md_theme_light_outline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:text="1"
                android:textColor="@color/md_theme_light_outline"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tweet_action_retweet"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@string/retweet"
                android:src="@drawable/ic_twitter_retweet"
                app:tint="@color/md_theme_light_outline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:text="5"
                android:textColor="@color/md_theme_light_outline"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/tweet_action_like"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@string/like"
                android:src="@drawable/ic_twitter_like_outline"
                app:tint="@color/md_theme_light_outline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:text="58"
                android:textColor="@color/md_theme_light_outline"
                android:textSize="13sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/tweet_action_edit"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@string/edit"
                android:src="@drawable/ic_edit_tweet"
                app:tint="@color/md_theme_light_outline" />
        </RelativeLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>