<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_onSecondary"
    tools:context=".ui.bottomNavigationView.AudioFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/tweets_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/tvTitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/happening_now"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvTitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spaces_going_on_right_now"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvTitle1" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvHappeningNow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:overScrollMode="never"
                        android:scrollbarThumbHorizontal="@null"
                        android:scrollbarThumbVertical="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvTitle2" />

                    <!--Get these inyour calendar-->
                    <TextView
                        android:id="@+id/tvTitle3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/get_these_in_your_calendar"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rvHappeningNow" />

                    <TextView
                        android:id="@+id/tvTitle4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/people_you_follow_will_be_tuning_in"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvTitle3" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvGetCalendar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:overScrollMode="never"
                        android:scrollbarThumbHorizontal="@null"
                        android:scrollbarThumbVertical="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvTitle4" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</FrameLayout>