<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.drawerNavigationView.ui.topicsUI.FollowedFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/tweets_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvTitle1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="40sp"
                        android:paddingVertical="25sp"
                        android:text="@string/the_topics_you_follow_are_used_to_personalize_the_tweets_events_and_ads_that_you_see_and_show_up_publicly_on_your_profile"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="0dp"
                        android:layout_height="0.5dp"
                        android:background="@color/md_theme_dark_secondary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvTitle1" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvTopics"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:overScrollMode="never"
                        android:scrollbarThumbHorizontal="@null"
                        android:scrollbarThumbVertical="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view" />

                    <View
                        android:id="@+id/view1"
                        android:layout_width="0dp"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/md_theme_dark_secondary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rvTopics" />


                    <TextView
                        android:id="@+id/tvTitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingHorizontal="12dp"
                        android:text="@string/suggested_topics"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view1" />

                    <TextView
                        android:id="@+id/tvDescriptions2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="12dp"
                        android:text="@string/you_ll_see_top_tweets_about_these_right_in_your_home_timeline"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvTitle2" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="24dp"
                        android:paddingHorizontal="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDescriptions2"
                        app:singleLine="false"/>

                    <TextView
                        android:id="@+id/tvMoreTopics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="10dp"
                        android:text="@string/more_topics"
                        android:textColor="@color/twitterBlueDarker"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="0dp"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/md_theme_dark_secondary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvMoreTopics" />

                    <TextView
                        android:id="@+id/tvFooter"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="40sp"
                        android:paddingVertical="25sp"
                        android:text="@string/topics_that_you_follow_are_shown_here_to_see_all_the_things_that_twitter_thinks_you_re_interested_in_check_out_your_twitter_data_you_can_also_learn_more_about_following_topics"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view2" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>